# GildenRose-Kata

./: .gitignore  README.md  start_texttest.sh
src/: CMakeLists.txt  GildedRose.cc  GildedRose.h
src/itemHandle/: AgedBrieHandle.cpp  AgedBrieHandle.hpp  BackStagePasses.cpp  BackStagePasses.hpp  ItemHandle.cpp  ItemHandle.hpp  ItemHandleBuilder.cpp  ItemHandleBuilder.hpp  StandarHandle.cpp  StandarHandle.hpp  Sulfuras.cpp  Sulfuras.hpp
test/cpp_googletest_approvaltest/: GildedRoseGoogletestApprovalTests.GildedRoseApprovalTests.VerifyCombinations.received.txt
test/cpp_googletest_unittest/: GildedRoseGoogletestUnitTests.cc
test/cpp_texttest/: GildedRoseTextTests.cc
texttests/: README.md  config.gr
